# cs3203-static-program-analyzer

./: .codecov.yml  .gitignore  README.md
Team26/Code26/src/spa/: CMakeLists.txt
Team26/Code26/src/spa/src/: PKB.h  StaticProgramAnalyzer.cpp  StaticProgramAnalyzer.h
Team26/Code26/src/spa/src/common/: Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
Team26/Code26/src/spa/src/common/exception/: AbsractTokenizerException.cpp  AbstractParserException.cpp  AbstractParserException.h  AbstractTokenizerException.h  ExceptionMessage.cpp  ExceptionMessage.h  ParserException.cpp  ParserException.h  TokenizerException.cpp  TokenizerException.h
Team26/Code26/src/spa/src/common/parser/: AbstractParser.cpp  AbstractParser.h  ShuntNode.cpp  ShuntNode.h  ShuntingYardParser.cpp  ShuntingYardParser.h
Team26/Code26/src/spa/src/common/tokenizer/: AbsractTokenizer.cpp  AbsractTokenizer.h  AbstractTokenizer.cpp  AbstractTokenizer.h
Team26/Code26/src/spa/src/common/tokens/: EndOfFileToken.cpp  EndOfFileToken.h  IntegerToken.cpp  IntegerToken.h  NameToken.cpp  NameToken.h  SpecialCharToken.cpp  StringExpressionToken.cpp  StringExpressionToken.h  Token.cpp  Token.h
Team26/Code26/src/spa/src/common/utils/: SharedPointerComparator.h  SharedPointerEquality.h
Team26/Code26/src/spa/src/program_knowledge_base/: ReadManager.cpp  ReadManager.h  ReadOnlyStorage.cpp  ReadOnlyStorage.h  SourceManager.h  Storage.h  StorageFacade.cpp  StorageFacade.h  StorageManager.cpp  StorageManager.h  StorageSingleton.cpp  StorageSingleton.h  StorageUtil.h  WriteManager.cpp  WriteManager.h  WriteOnlyStorage.cpp  WriteOnlyStorage.h
Team26/Code26/src/spa/src/program_knowledge_base/entity/: EntityManager.cpp  EntityManager.h  IReadEntityManager.h  IWriteEntityManager.h  ReadOnlyEntityManager.cpp  ReadOnlyEntityManager.h  WriteOnlyEntityManager.cpp  WriteOnlyEntityManager.h
Team26/Code26/src/spa/src/program_knowledge_base/pattern/: IReadPatternManager.h  IWritePatternManager.h  PatternManager.h  ReadOnlyPatternManager.cpp  ReadOnlyPatternManager.h  WriteOnlyPatternManager.h
Team26/Code26/src/spa/src/program_knowledge_base/relationship/: FollowsManager.h  FollowsTManager.h  IReadRelationshipManager.h  IWriteRelationshipManager.h  ModifiesPManager.h  ModifiesSManager.h  ParentManager.h  ParentTManager.h  ReadOnlyRelationshipManager.cpp  ReadOnlyRelationshipManager.h  RelationshipManager.cpp  RelationshipManager.h  UsesPManager.h  UsesSManager.h  WriteOnlyRelationshipManager.cpp  WriteOnlyRelationshipManager.h
Team26/Code26/src/spa/src/query_processing_system/: QueryEvaluator.cpp  QueryEvaluator.h  QueryManager.cpp  QueryManager.h  QueryPreprocessor.cpp  QueryPreprocessor.h  QueryTokenizer.cpp  QueryTokenizer.h  QueryValidator.cpp  QueryValidator.h
Team26/Code26/src/spa/src/query_processing_system/evaluator/: AttributeReferenceMap.cpp  AttributeReferenceMap.h  PkbUtil.cpp  PkbUtil.h  QueryDb.cpp  QueryDb.h  QueryResult.cpp  QueryResult.h  Result.cpp  Result.h  ResultTable.cpp  ResultTable.h  UnionFind.cpp  UnionFind.h  Util.cpp  Util.h
Team26/Code26/src/spa/src/query_processing_system/exception/: QueryException.h  QueryExceptionMessages.cpp  QueryExceptionMessages.h  QuerySemanticException.h  QuerySyntaxException.h
Team26/Code26/src/spa/src/query_processing_system/parser/: Argument.cpp  Argument.h  Declaration.cpp  Declaration.h  DesignEntity.cpp  DesignEntity.h  Query.cpp  Query.h  QueryParser.cpp  QueryParser.h  QueryParserUtil.cpp  QueryParserUtil.h  SelectClause.cpp  SelectClause.h  StringExpression.cpp  StringExpression.h  Synonym.cpp  Synonym.h  Wildcard.cpp  Wildcard.h
Team26/Code26/src/spa/src/source_processor/: DesignExtractor.cpp  DesignExtractor.h  SourceManager.cpp  SourceManager.h  SourceParser.cpp  SourceParser.h  SourceTokenizer.cpp  SourceTokenizer.h  SourceTokenzier.cpp  SourceTokenzier.h
Team26/Code26/src/spa/src/source_processor/design_extractor/: DesignExtractor.cpp  DesignExtractor.h
Team26/Code26/src/spa/src/source_processor/exception/: SourceException.cpp  SourceException.h  SourceProcessorExceptionMessage.cpp  SourceProcessorExceptionMessage.h
Team26/Code26/src/spa/src/source_processor/extractor/: AbstractSyntaxTreeExtractor.cpp  AbstractSyntaxTreeExtractor.h
Team26/Code26/src/spa/src/source_processor/node/: CondExprNode.cpp  CondExprNode.h  ExprNode.cpp  ExprNode.h  Node.h  ProcedureNode.cpp  ProcedureNode.h  ProgramNode.cpp  ProgramNode.h  StmtListNode.cpp  StmtListNode.h  TermNode.cpp  TermNode.h
Team26/Code26/src/spa/src/source_processor/parser/: Parser.cpp  Parser.h  SourceParser.cpp  SourceParser.h
Team26/Code26/src/spa/src/source_processor/storage/: EntityStore.cpp  EntityStore.h  IEntityStore.h  IPatternStore.h  IRelationshipStore.h  PatternStore.h  RelationshipStore.cpp  RelationshipStore.h  Store.cpp  Store.h
Team26/Code26/src/spa/src/source_processor/storage_writer/: Store.cpp  Store.h
Team26/Code26/src/spa/src/source_processor/tokenizer/: SourceTokenizer.cpp  SourceTokenizer.h  Tokenizer.cpp  Tokenizer.h
Team26/Code26/src/unit_testing/: CMakeLists.txt
Team26/Code26/src/unit_testing/src/common/: TestParser.cpp  TestParser.h  TestShuntingYard.cpp  TestTokenizer.cpp  TestTokenizer.h
Team26/Code26/src/unit_testing/src/program_knowledge_base/: TestEntityManager.cpp  TestPatternManager.cpp  TestRelationshipManager.cpp
Team26/Code26/src/unit_testing/src/query_processing_system/: TestQueryValidator.cpp
Team26/Code26/src/unit_testing/src/query_processing_system/evaluator/: TestQueryDb.cpp  TestQueryEvaluator.cpp  (+3 more)
Team26/Code26/src/unit_testing/src/source_processor/: TestParser.cpp
(+405 files in other folders)
