file(GLOB_RECURSE srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_library(spa ${srcs} ${headers} src/query_processing_system/parser/Wildcard.h src/query_processing_system/parser/clause/pattern_clause/AssignPatternClause.h src/query_processing_system/parser/StringExpression.h src/query_processing_system/parser/clause/pattern_clause/AssignPatternClauseFactory.h src/query_processing_system/evaluator/clause_evaluator/pattern_clause_evaluator/AssignPatternClauseEvaluator.h src/query_processing_system/evaluator/clause_evaluator/pattern_clause_evaluator/PatternClauseEvaluator.h src/query_processing_system/parser/clause/pattern_clause/PatternClause.cpp src/query_processing_system/parser/clause/pattern_clause/PatternClauseFactory.h) # this makes the headers accessible for other projects which uses spa lib
target_include_directories(spa PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)