file(GLOB_RECURSE srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_library(spa ${srcs} ${headers} src/query_processing_system/evaluator/clause_evaluator/such_that_clause_evaluator/FollowsTClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/such_that_clause_evaluator/IntIntClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/such_that_clause_evaluator/IntIntClauseEvaluator.h src/query_processing_system/evaluator/clause_evaluator/such_that_clause_evaluator/IntStringClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/such_that_clause_evaluator/IntStringClauseEvaluator.h) # this makes the headers accessible for other projects which uses spa lib
target_include_directories(spa PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)