file(GLOB_RECURSE srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_executable(unit_testing ${srcs} src/query_processing_system/parser/TestQueryParser.cpp src/query_processing_system/evaluator/TestQueryEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/MockIntStringClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/MockIntStringClauseEvaluator.h src/query_processing_system/evaluator/clause_evaluator/MockIntIntClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/MockIntIntClauseEvaluator.h src/query_processing_system/evaluator/clause_evaluator/TestIntIntClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/TestIntStringClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/TestPkbUtils.cpp src/common/TestShuntingYard.cpp)
add_executable(unit_testing ${srcs} src/query_processing_system/parser/TestQueryParser.cpp src/query_processing_system/evaluator/TestQueryEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/MockIntStringClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/MockIntStringClauseEvaluator.h src/query_processing_system/evaluator/clause_evaluator/MockIntIntClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/MockIntIntClauseEvaluator.h src/query_processing_system/evaluator/clause_evaluator/TestIntIntClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/TestIntStringClauseEvaluator.cpp src/query_processing_system/evaluator/clause_evaluator/TestPkbUtils.cpp src/common/TestShuntingYard.cpp src/source_processor/design_extractor/TestExtractorUtil.h)
target_link_libraries(unit_testing spa)
